kotlin-parser/src/test/semlang/validatorTests/fail/booleanLiteral4.sem
function myStuff.myFunction(): Boolean {
  return Boolean."n"
}
